@@ -14,6 +14,18 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <property name="leftMargin">
+    <number>6</number>
+   </property>
+   <property name="topMargin">
+    <number>6</number>
+   </property>
+   <property name="rightMargin">
+    <number>6</number>
+   </property>
+   <property name="bottomMargin">
+    <number>6</number>
+   </property>
    <item row="0" column="0">
     <widget class="snowgui::imagedisplaywidget" name="imageWidget" native="true"/>
    </item>
@@ -40,7 +52,7 @@
            <x>0</x>
            <y>0</y>
            <width>326</width>
-           <height>632</height>
+           <height>644</height>
           </rect>
          </property>
          <attribute name="label">
@@ -48,21 +60,53 @@
          </attribute>
         </widget>
         <widget class="snowgui::filterwheelcontrollerwidget" name="filterwheelcontrollerWidget">
+         <property name="geometry">
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>326</width>
+           <height>638</height>
+          </rect>
+         </property>
          <attribute name="label">
           <string>Filterwheel</string>
          </attribute>
         </widget>
         <widget class="snowgui::focusercontrollerwidget" name="focusercontrollerWidget">
+         <property name="geometry">
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>326</width>
+           <height>638</height>
+          </rect>
+         </property>
          <attribute name="label">
           <string>Focuser</string>
          </attribute>
         </widget>
         <widget class="snowgui::guideportcontrollerwidget" name="guideportcontrollerWidget">
+         <property name="geometry">
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>326</width>
+           <height>638</height>
+          </rect>
+         </property>
          <attribute name="label">
           <string>Guideport</string>
          </attribute>
         </widget>
         <widget class="snowgui::adaptiveopticscontrollerwidget" name="adaptiveopticscontrollerWidget">
+         <property name="geometry">
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>326</width>
+           <height>638</height>
+          </rect>
+         </property>
          <attribute name="label">
           <string>Adative Optics</string>
          </attribute>
@@ -73,7 +117,7 @@
            <x>0</x>
            <y>0</y>
            <width>326</width>
-           <height>632</height>
+           <height>638</height>
           </rect>
          </property>
          <attribute name="label">
