@@ -7,7 +7,7 @@
 QT       += core gui widgets
 
 TEMPLATE = subdirs
-SUBDIRS = astrogui icegui image preview test focusing guiding pointing
+SUBDIRS = astrogui icegui image test focusing guiding pointing
 SUBDIRS += instruments
 SUBDIRS += images repository expose task browser main
 SUBDIRS += astrobrowser astroviewer snowlife
